@@ -20,6 +20,7 @@ CURRENT VERSION:
 	missions translations update
 	russian update
 	when you update to a new version it does not replace the game.ini
+	do not give 414 errors on really large numbers of maps
 
 	Android 20 maps not loading because of currupted download error fixed,
 		   (files were currupted because of operator transcoding)
